# camelot2026

./: .env.example  .gitignore  CHANGELOG_AGENT.md  QuantumLauncher.spec  QuantumLauncher_v10.1.spec  Quantum_Launchpad.bat  README.md  check_api.py  check_limiti_eur.py  check_low_min.py  check_orders.py  debug_balance.py  debug_keys.py  debug_keys_fixed.py  debug_portafoglio.py  list_eur_pairs.py  main.py  monitor.py  neural_seed.py  proof_of_action.py  pyproject.toml  requirements.txt  start_live.py  start_trader.bat  test_api.py  test_secret_variations.py
archive_backups_v11/v10.3_stable_safety_guardian/: main.py
backups/v9_neural_singularity_stable/: main.py
data/: autonomous_config.json
data/dca/: dca_state.json
data/gems/: gem_paper_portfolio.json
data/grids/: grid_state.json
docs/: ENVIRONMENT_STATUS.md  environment_status.json
logs/: ai_trader.jsonl
reports/: index.html  night_report_1776121974.json  night_report_1776122149.json  night_report_1776122966.json
scripts/: check_environment.py  quantum_launcher.py
tests/: __init__.py  test_binance_testnet_adapter.py  test_brain_runtime.py  test_brain_transitions.py  test_dream_agent.py  test_execution_hardening.py  test_execution_preview_engine.py  test_guardrail_engine.py  test_live_readiness.py  test_mcp_core.py  test_memory_core.py  test_memory_retrieval.py  test_night_session.py  test_ollama_client.py  test_phase6_allocation.py  test_phase7_learning.py  test_read_only_tools.py  test_risk_kernel.py  test_risk_persistence.py  test_risk_state_tracker.py  test_strategy_policy_engine.py
(+123 files in other folders)
